--- a/backend/package.json
+++ b/backend/package.json
@@ -3,6 +3,7 @@
     "axios": "^1.4.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.2",
     "react-router": "^5.3.4",
     "react-router-dom": "^6.14.2"
