--- a/backend/package.json
+++ b/backend/package.json
@@ -2,6 +2,8 @@
   "dependencies": {
     "axios": "^1.4.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "env-cmd": "^10.1.0",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.2",
@@ -14,5 +16,10 @@
     "@types/webpack": "^5.28.1",
     "sass": "^1.64.2",
     "sass-loader": "^13.3.2"
+  },
+  "scripts": {
+    "backend": "node newIndex.js",
+    "backend-prod": "env-cmd -f .env.production node newIndex.js",
+    "old-backend": "node index.js"
   }
 }
