--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "dotenv": "^16.3.1",
+    "env-cmd": "^10.1.0",
     "jwt-decode": "^3.1.2",
     "mongodb": "^5.7.0",
     "react": "^18.2.0",
@@ -22,6 +24,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "deployed": "env-cmd -f .env.deployed react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
